--- a/tmux.conf
+++ b/tmux.conf
@@ -2,8 +2,19 @@
 setw -g xterm-keys on
 setw -g mode-keys vi
 
+# Remap prefix from C-b to C-q
+unbind C-b
+set-option -g prefix C-q
+bind-key C-q send-prefix
+
 # Set reload key to r
 bind r source-file ~/.tmux.conf \; display-message "Tmux Conf reloaded"
+
+# Split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
 # Count sessions starts at 1
 set -g base-index 1
@@ -11,23 +22,22 @@ set -g base-index 1
 # Set the title bar
 set -g set-titles on
 
-# Remap window navigation to vim
-unbind-key j
-bind-key j select-pane -D 
-unbind-key k
-bind-key k select-pane -U
-unbind-key h
-bind-key h select-pane -L
-unbind-key l
-bind-key l select-pane -R
+# Remap switch panes to Alt/Meta-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Enable mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
 
 # Set status bar
 set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
-set -g status-interval 5 
+set -g status-interval 5
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]::#[fg=yellow]#(curl -s http://ipv6-test.com/api/myip.php;echo)"
+set -g status-left "#[fg=Green]#(whoami)#[fg=white]@#[fg=blue]#(hostname -s)#[fg=white] on #[fg=yellow]#(curl -s http://ipv6-test.com/api/myip.php;echo)"
 set -g status-justify left
 set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
