Added 256 colors option

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,9 @@
 setw -g xterm-keys on
 setw -g mode-keys vi
 
+# Setting tmux terminal to 256 colors
+set -g default-terminal "screen-256color"
+
 # Remap prefix from C-b to C-q
 unbind C-b
 set-option -g prefix C-q
